--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-      "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true
+      "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -191,7 +192,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-      "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true
+      "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -219,7 +221,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -271,7 +274,8 @@ const services = [
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -466,7 +470,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -488,7 +493,8 @@ const services = [
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
-      "Медицинское заключение для получения технических средств реабилитации": true
+      "Медицинское заключение для получения технических средств реабилитации": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -498,7 +504,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -508,7 +515,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -518,7 +526,8 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Являетесь родственником участника СВО": true
+      "Являетесь родственником участника СВО": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -582,7 +591,8 @@ const services = [
     params: {
       "Наличие несовершеннолетних детей": true,
       "Являетесь родственником участника СВО": true,
-      "Получаю ежемесячную денежную выплату": true
+      "Получаю ежемесячную денежную выплату": true,
+      "Семья является многодетной": true
     }
   },
   {
@@ -595,7 +605,8 @@ const services = [
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
       "Медицинское заключение для получения технических средств реабилитации": true,
-      "Получаю ежемесячную денежную выплату": true
+      "Получаю ежемесячную денежную выплату": true,
+      "Семья является многодетной": true
     }
   },
   {
