--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@ const services = [
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
-      "ИПРА (индивидуальная программа реабилитации)": true
+      "ИПРА (индивидуальная программа реабилитации)": true,
+      "Размер дохода менее 1 МРОТ ?": true
     }
   },
   {
@@ -494,7 +495,8 @@ const services = [
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
       "Медицинское заключение для получения технических средств реабилитации": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Размер дохода менее 1 МРОТ ?": true
     }
   },
   {
@@ -592,7 +594,8 @@ const services = [
       "Наличие несовершеннолетних детей": true,
       "Являетесь родственником участника СВО": true,
       "Получаю ежемесячную денежную выплату": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Размер дохода менее 1 МРОТ ?": true
     }
   },
   {
@@ -617,7 +620,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
-      "Получаю ежемесячную денежную выплату": true
+      "Получаю ежемесячную денежную выплату": true,
+      "Размер дохода менее 1 МРОТ ?": true
     }
   },
   {
