--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@ const services = [
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -193,7 +194,8 @@ const services = [
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -222,7 +224,8 @@ const services = [
       "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Являетесь родственником участника СВО": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -275,7 +278,8 @@ const services = [
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true,
       "Являетесь родственником участника СВО": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -472,7 +476,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -496,7 +501,8 @@ const services = [
       "ИПРА (индивидуальная программа реабилитации)": true,
       "Медицинское заключение для получения технических средств реабилитации": true,
       "Семья является многодетной": true,
-      "Размер дохода менее 1 МРОТ ?": true
+      "Размер дохода менее 1 МРОТ ?": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -507,7 +513,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -518,7 +525,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -529,7 +537,8 @@ const services = [
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -595,7 +604,8 @@ const services = [
       "Являетесь родственником участника СВО": true,
       "Получаю ежемесячную денежную выплату": true,
       "Семья является многодетной": true,
-      "Размер дохода менее 1 МРОТ ?": true
+      "Размер дохода менее 1 МРОТ ?": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
@@ -609,7 +619,8 @@ const services = [
       "ИПРА (индивидуальная программа реабилитации)": true,
       "Медицинское заключение для получения технических средств реабилитации": true,
       "Получаю ежемесячную денежную выплату": true,
-      "Семья является многодетной": true
+      "Семья является многодетной": true,
+      "Есть дети, обучающиеся в образовательных организациях": true
     }
   },
   {
