--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Профилирование услуг для участников СВО</title>
   <style>
-<style>
 @media (max-width: 600px) {
     body {
         padding: 10px;
@@ -76,8 +75,7 @@ h2 {
     box-shadow: 0 3px 6px rgba(0,0,0,0.15);
 }
 </style>
-  </style>
-</head>
+  </head>
 <body>
 <div style="text-align:center; margin-bottom:15px;">
   <!-- ТВОЙ SVG -->
@@ -107,7 +105,7 @@ h2 {
   
 <h2 id="resultsTitle" style="display:none; margin-top:25px;">Подходящие услуги:</h2>
 
-<div class="result"
+<div class="result">
   <div id="servicesList"></div>
 </div>
   
