--- a/index.html
+++ b/index.html
@@ -831,7 +831,13 @@ document.addEventListener("click", function(e) {
     serviceItems.forEach(item => {
       lines.push({ text: item.innerText, margin: [0, 5, 0, 0] });
     });
-
+  // Добавляем сноску
+lines.push({
+  text: "\n*Информация предоставлена в ознакомительных целях. Для уточнения перечня услуг обращайтесь в МФЦ или на официальный портал госуслуг.*",
+  italics: true,
+  fontSize: 10,
+  margin: [0, 15, 0, 0]
+});
     const docDefinition = {
       content: lines,
       styles: {
