--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ document.addEventListener("click", function(e) {
     });
   // Добавляем сноску
 lines.push({
-  text: "\n*Информация предоставлена в ознакомительных целях. Для уточнения перечня услуг обращайтесь в МФЦ или на официальный портал госуслуг.*",
+  text: "\n*Информация предоставлена в ознакомительных целях. Для получения более подробной информации вы можете обратиться на горячую линию ГБУ «МФЦ КБР» по номеру 8 800 100 32-82.*",
   italics: true,
   fontSize: 10,
   margin: [0, 15, 0, 0]
