--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@ h2 {
 .btn {
     display: block;
     width: 100%;
+    max-width: 320px; /* 👉 ограничиваем ширину */
+    margin: 20px auto; /* 👉 центрируем */
     text-align: center;
-    background: #ed5338; /* фирменный красный */
+    background: #ed5338;
     color: #fff;
     padding: 14px 0;
     border-radius: 10px;
@@ -65,7 +67,6 @@ h2 {
     font-weight: 600;
     border: none;
     cursor: pointer;
-    margin-top: 20px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     transition: background 0.2s ease, box-shadow 0.2s ease;
 }
