--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@ h2 {
     background: #d9482f;
     box-shadow: 0 3px 6px rgba(0,0,0,0.15);
 }
+.btn:active {
+    transform: scale(0.97); /* лёгкое продавливание */
+    box-shadow: 0 1px 3px rgba(0,0,0,0.2); /* тень уменьшается */
+}
 </style>
   </head>
 <body>
