--- a/index.html
+++ b/index.html
@@ -98,6 +98,37 @@ h2 {
 .question input:active {
     transform: scale(0.85);
 }
+/* Контейнер категории */
+.question label {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 6px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.25s ease, transform 0.15s ease;
+}
+
+/* Плавное прожатие при клике */
+.question label:active {
+    transform: scale(0.97);
+}
+
+/* Плавная анимация чекбокса */
+.question input {
+    transform-origin: center;
+    transition: transform 0.15s ease;
+}
+
+/* Прожатие чекбокса */
+.question input:active {
+    transform: scale(0.85);
+}
+
+/* Подсветка выбранного пункта */
+.question input:checked ~ * {
+    background: #f4e7e4;
+}
 </style>
   </head>
 <body>
