--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@ h2 {
     cursor: pointer;
     transition: background 0.25s ease, transform 0.15s ease;
 }
+.question label:hover {
+    background: #f4e7e4;
+    transform: scale(0.99);
+}
 
 /* Плавное прожатие при клике */
 .question label:active {
