--- a/index.html
+++ b/index.html
@@ -871,11 +871,11 @@ pdfBtn.className = "btn";   // ← вот это главное
 pdfBtn.textContent = "Скачать PDF";
 list.appendChild(pdfBtn);
 }
+// Плавный скролл вниз к списку услуг
 setTimeout(() => {
-    document.getElementById("resultsTitle").scrollIntoView({
-        behavior: "smooth",
-        block: "start"
-    });
+  const target = document.getElementById("servicesList");
+  const y = target.getBoundingClientRect().top + window.scrollY - 20;
+  window.scrollTo({ top: y, behavior: "smooth" });
 }, 100);
   
 // Обработчик кнопки PDF
