--- a/index.html
+++ b/index.html
@@ -871,6 +871,14 @@ pdfBtn.className = "btn";   // ← вот это главное
 pdfBtn.textContent = "Скачать PDF";
 list.appendChild(pdfBtn);
 }
+// ⭐ Абсолютно надёжный автоскролл
+requestAnimationFrame(() => {
+  requestAnimationFrame(() => {
+    const target = document.getElementById("servicesList");
+    const y = target.getBoundingClientRect().top + window.scrollY - 20;
+    window.scrollTo({ top: y, behavior: "smooth" });
+  });
+});
 // Плавный скролл вниз к списку услуг
 setTimeout(() => {
   const target = document.getElementById("servicesList");
