--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@ const services = [
     }
   }
 ];
-<!-- 🔹 ТВОЙ ОСНОВНОЙ КОД -->
+<!-- ОСНОВНОЙ КОД -->
 // 3. Рендерим вопросы (чекбоксы)
 const questionsContainer = document.getElementById('questions');
 
