--- a/index.html
+++ b/index.html
@@ -133,6 +133,26 @@ h2 {
 .question input:checked ~ * {
     background: #f4e7e4;
 }
+/* Размер текста для ПК (экраны шире 900px) */
+@media (min-width: 900px) {
+    body {
+        max-width: 800px;   /* ширина контента */
+        margin: 0 auto;     /* центрирование */
+    }
+
+    .question label {
+        max-width: 700px;
+        margin: 0 auto;
+    }
+
+    .service-item,
+    .btn,
+    #resultsTitle {
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 </style>
   </head>
 <body>
