--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ h2 {
     display: block;
     width: 100%;
     max-width: 320px;
-    margin: 20px auto; 
+    margin: 12px auto; 
     text-align: center;
     background: #ed5338;
     color: #fff;
@@ -103,7 +103,7 @@ h2 {
     display: flex;
     align-items: center;
     gap: 8px;
-    padding: 6px 10px;
+    padding: 4px 8px;
     border-radius: 8px;
     cursor: pointer;
     transition: background 0.25s ease, transform 0.15s ease;
@@ -161,10 +161,14 @@ h2 {
     height: auto;
     margin: 0 auto 10px;
 }
+h1 {
+    margin-top: 5px;
+    margin-bottom: 6px;
+}
 </style>
   </head>
 <body>
-<div style="text-align:center; margin-bottom:15px;">
+<div style="text-align:center; margin:5px 0 8px;">
   <!-- ТВОЙ SVG -->
   <svg class="logo-mfc" viewBox="0 0 197 59" fill="none" xmlns="http://www.w3.org/2000/svg">
     <g clip-path="url(#a)">
