--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@ h2 {
         margin: 0 auto;
     }
 
+    h1 {
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: left;
+    }
+
     h2 {
         max-width: 700px;
         margin-left: auto;
