--- a/index.html
+++ b/index.html
@@ -698,6 +698,7 @@ const services = [
     id: 34,
     name: "Академическое право на переход лиц, обучающихся по образовательным программам среднего профессионального и высшего образования, с платного обучения на бесплатное",
     params: {
+      "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
@@ -708,6 +709,7 @@ const services = [
     id: 35,
     name: "Право на прием на обучение по программам бакалавриата и программам специалитета в образовательные организации высшего образования в пределах отдельной квоты",
     params: {
+      "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
@@ -718,6 +720,7 @@ const services = [
     id: 36,
     name: "Право на прием на обучение на подготовительные отделения в федеральные государственные образовательные организации высшего образования в пределах отдельной квоты",
     params: {
+      "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
