--- a/index.html
+++ b/index.html
@@ -359,9 +359,8 @@ const services = [
     name: "Предоставление отсрочки уплаты арендной платы по договорам аренды муниципального имущества в связи с частичной мобилизацией",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true
-    }
+      "Получена справка об участии в СВО": true
+      }
   },
   {
     id: 4,
@@ -369,7 +368,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Семья является многодетной": true,
@@ -382,7 +380,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Семья является многодетной": true,
@@ -402,16 +399,14 @@ const services = [
     name: "Освобождение от начисления пеней в случае несвоевременного и (или) неполного внесения гражданами Российской Федерации платы за жилое помещение и коммунальные услуги",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true
-    }
+      "Получена справка об участии в СВО": true
+      }
   },
   {
     id: 8,
     name: "Предоставление семьям участников специальной военной операции права бесплатного посещения детьми занятий по дополнительным общеобразовательным программам",
     params: {
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
@@ -424,7 +419,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true
@@ -435,27 +429,24 @@ const services = [
     name: "Первоочередное право на приобретение садовых земельных участков или огородных земельных участков",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true
-    }
+      "Получена справка об участии в СВО": true
+      }
   },
 {
     id: 11,
     name: "Освобождение от уплаты услуг по водоснабжению и водоотведению",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true
-    }
+      "Получена справка об участии в СВО": true
+      }
   },
   {
     id: 12,
     name: "Предоставление возможности расторжения договоров аренды без применения штрафных санкций",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true
-    }
+      "Получена справка об участии в СВО": true
+     }
   },
   {
     id: 13,
@@ -478,7 +469,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true
     }
   },
@@ -539,7 +529,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true
     }
   },
@@ -564,7 +553,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true,
@@ -609,7 +597,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true
     }
   },
@@ -630,9 +617,8 @@ const services = [
     name: "Обеспечение бесплатного посещения культурно-массовых мероприятий, кружков и секций",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true
-    }
+      "Получена справка об участии в СВО": true
+      }
   },
   {
     id: 29,
@@ -663,7 +649,6 @@ const services = [
     name: "Социальная поддержка детей-сирот и детей, оставшихся без попечения родителей, в КБР",
     params: {
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true
@@ -699,7 +684,6 @@ const services = [
     name: "Академическое право на переход лиц, обучающихся по образовательным программам среднего профессионального и высшего образования, с платного обучения на бесплатное",
     params: {
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true
@@ -710,7 +694,6 @@ const services = [
     name: "Право на прием на обучение по программам бакалавриата и программам специалитета в образовательные организации высшего образования в пределах отдельной квоты",
     params: {
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true
@@ -721,7 +704,6 @@ const services = [
     name: "Право на прием на обучение на подготовительные отделения в федеральные государственные образовательные организации высшего образования в пределах отдельной квоты",
     params: {
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true
@@ -764,7 +746,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true
     }
   },
@@ -812,7 +793,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true,
       "Являетесь родственником участника СВО": true,
       "Получаю ежемесячную денежную выплату": true,
       "Размер дохода менее 1 МРОТ ?": true
@@ -856,9 +836,8 @@ const services = [
     id: 50,
     name: "Предоставление отсрочки уплаты арендной платы либо возможности расторжения договоров аренды федерального имущества без применения штрафных санкций",
     params: {
-      "Получена справка об участии в СВО": true,
-      "Есть инвалидность": true
-    }
+      "Получена справка об участии в СВО": true
+      }
   },
   {
     id: 51,
