--- a/index.html
+++ b/index.html
@@ -337,7 +337,6 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true
     }
@@ -349,7 +348,6 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true
     }
@@ -368,7 +366,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true
@@ -380,7 +377,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true
@@ -407,7 +403,6 @@ const services = [
     name: "Предоставление семьям участников специальной военной операции права бесплатного посещения детьми занятий по дополнительным общеобразовательным программам",
     params: {
       "Получена справка об участии в СВО": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Являетесь родственником участника СВО": true,
       "Семья является многодетной": true,
       "Есть дети, обучающиеся в образовательных организациях": true
@@ -419,7 +414,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true
     }
@@ -455,7 +449,6 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true,
       "Являетесь родственником участника СВО": true,
@@ -539,7 +532,6 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
@@ -553,7 +545,6 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Наличие несовершеннолетних детей": true,
       "Являетесь родственником участника СВО": true
@@ -627,7 +618,6 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true
@@ -640,7 +630,6 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Являетесь родственником участника СВО": true
     }
   },
@@ -668,7 +657,6 @@ const services = [
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
       "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Плачу налоги (транспортный, земельный налог, налог на имущество физ. лиц)": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
@@ -714,9 +702,8 @@ const services = [
     name: "Предоставление набора социальных услуг",
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
-      "Есть инвалидность": true,
-      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true
-    }
+      "Есть инвалидность": true
+      }
   },
   {
     id: 38,
@@ -746,6 +733,7 @@ const services = [
     params: {
       "Получено удостоверение Ветерана боевых действий": true,
       "Получена справка об участии в СВО": true,
+      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Являетесь родственником участника СВО": true
     }
   },
@@ -758,6 +746,7 @@ const services = [
       "Есть инвалидность": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
       "ИПРА (индивидуальная программа реабилитации)": true,
+      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "Медицинское заключение для получения технических средств реабилитации": true
     }
   },
@@ -872,6 +861,7 @@ const services = [
       "Есть инвалидность": true,
       "Имею право на санаторно-курортное лечение": true,
       "Справка МСЭ (медико-социальной экспертизы)": true,
+      "Требуется комплексное сопровождение филиала Фонда \"Защитники Отечества\"": true,
       "ИПРА (индивидуальная программа реабилитации)": true
     }
   },
